# timecode-calculator

./: README.md  Timecode Calculator.spec  app.py  pyproject.toml  requirements.txt  start.bat  start.py  start.sh  test_timecode.py  timecode.py
static/: script.js  style.css
templates/: index.html
