[project]
name = "timecode-calculator"
version = "0.2.0"
description = "A desktop timecode calculator for adding timecodes in HH:MM:SS:FF, HH:MM:SS,mmm, and HH:MM:SS formats"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.0",
    "pyinstaller>=6.19.0",
]

[project.scripts]
timecode-calculator = "app:main"
